<resources>
    <string name="app_name" translatable="false">PJPL</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_settings">Settings</string>
    <string name="title_today">Today</string>
    <string name="lecturers_label">Lecturers: </string>
    <string name="codes_label">Subject codes: </string>
    <string name="type_label">Type: </string>
    <string name="building_label">Building: </string>
    <string name="groups_label">Groups: </string>
    <string name="students_count_label">Students: </string>
    <string name="dateFrom">Date from</string>
    <string name="dateTo">Date to</string>
    <string name="reloadData">Reload data</string>
    <string name="dataScrapperSettings">Data scrapper settings</string>
    <string name="groups">Groups regex</string>
    <string name="noData">No data for</string>
</resources>