<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_calendar_month_24dp"
        android:title="@string/title_calendar" />

    <item
        android:id="@+id/navigation_today"
        android:icon="@drawable/ic_event_24dp"
        android:title="@string/title_today" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_24dp"
        android:title="@string/title_settings" />

</menu>