...
        android:layout_height="0dip"
        android:layout_weight="1">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            android:id="@+id/logs" />
    </ScrollView>

    <Button
        android:layout_weight="0"
        android:id="@+id/loadButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/reloadData" />

    <com.google.android.material.progressindicator.LinearProgressIndicator
...
